--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>67</title>
 </head>
-<link rel="stylesheet" href="/css/style.css">
-<link rel="stylesheet" href="/css/normalize.css">
+<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/normalize.css">
 
 <body>
     <header class="header"></header>
     <main class="main">
         <div class="main-video">
             <video controls class="video">
-                <source src="/video/Вот это поворот!.mp4">
+                <source src="video/Вот это поворот!.mp4">
             </video>
         </div>
     </main>
